infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-depl
spec:
    replicas: 1 # number of pods running the same image.
    selector: # here we are telling him who to manage 
        matchLabels:  ## find pod with this label
            app: client 
    template:  # specify the creation 
        metadata:
            labels:
                app: client 
        spec:
            containers:
                - name: client
                  image: neilmichaeli/comments
                  
---
    apiVersion: v1
    kind: Service
    metadata:
        name: client-srv
    spec:
        selector:
              app: client
        ports:
          - name: client
            protocol: TCP
            port: 3000
            targetPort: 3000
