infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: moderation-depl
spec:
    replicas: 1 # number of pods running the same image.
    selector: # here we are telling him who to manage 
        matchLabels:  ## find pod with this label
            app: moderation 
    template:  # specify the creation 
        metadata:
            labels:
                app: moderation 
        spec:
            containers:
                - name: moderation
                  image: neilmichaeli/moderation
                  
---
    apiVersion: v1
    kind: Service
    metadata:
        name: moderation-srv
    spec:
        selector:
              app: moderation
        ports:
          - name: moderation
            protocol: TCP
            port: 4003
            targetPort: 4003
