infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: query-depl
spec:
    replicas: 1 # number of pods running the same image.
    selector: # here we are telling him who to manage 
        matchLabels:  ## find pod with this label
            app: query 
    template:  # specify the creation 
        metadata:
            labels:
                app: query 
        spec:
            containers:
                - name: query
                  image: neilmichaeli/query
                  
---
    apiVersion: v1
    kind: Service
    metadata:
        name: query-srv
    spec:
        selector:
              app: query
        ports:
          - name: query
            protocol: TCP
            port: 4002
            targetPort: 4002
